--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
   padding: 0;
   text-align: center;
 }
+body {
+  scroll-behavior: smooth;
+}
 
 /* Navbar start */
 .navbar {
@@ -184,7 +187,7 @@
 
 /* Start of FoodList */
 .food-list {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
 }
 .food-list h2 {
@@ -192,4 +195,270 @@
   font-weight: bold;
   text-shadow: #191313 2px 8px 20px;
 }
+
 /* End of FoodList */
+
+/* Start of Food item */
+.food-list-container {
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+}
+.food-item {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 10px;
+  max-width: 22rem;
+  border: solid 1px rgb(235, 228, 228);
+  box-shadow: rgb(221, 224, 221) 1px 1px 10px 0px;
+}
+.card-body {
+  justify-content: space-between;
+}
+/* End of Food item */
+
+/* Start of Contact */
+.contact {
+  position: relative;
+  width: 100%;
+  padding: 45px 0;
+}
+
+.contact .contact-info {
+  width: 100%;
+  margin-bottom: 45px;
+  padding: 35px 30px 10px 30px;
+  border-radius: 5px;
+  background: #d1282d;
+}
+
+.contact .contact-info h2 {
+  color: #ffffff;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.contact .contact-info-item {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 30px;
+}
+
+.contact .contact-info-icon {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #ffffff;
+  border-radius: 50px;
+}
+
+.contact .contact-info-icon i {
+  margin: 0;
+  color: #d1282d;
+  font-size: 16px;
+}
+
+.contact .contact-info-text {
+  padding-left: 20px;
+}
+
+.contact .contact-info-text h3 {
+  margin: 0 0 5px 0;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+.contact .btn-custom {
+  border: solid 1px #d1282d;
+  color: #d1282d;
+}
+
+.contact .contact-info-text p {
+  margin: 0;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.contact .contact-form {
+  position: relative;
+  width: 100%;
+  margin-bottom: 45px;
+}
+
+.contact .contact-form input {
+  padding: 15px;
+  border-radius: 5px;
+  border: 1px solid #d1282d;
+}
+
+.contact .contact-form textarea {
+  height: 125px;
+  padding: 8px 15px;
+  border-radius: 5px;
+  border: 1px solid #d1282d;
+}
+
+.contact .help-block ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.contact iframe {
+  width: 100%;
+  height: 400px;
+  border-radius: 5px;
+}
+/* End of Contact */
+
+/* Start of Footer */
+.footer {
+  margin-top: 5rem;
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
+  margin-top: 45px;
+  padding-top: 90px;
+  background: #202c45;
+}
+
+.footer .footer-contact,
+.footer .footer-link,
+.footer .footer-newsletter {
+  position: relative;
+  margin-bottom: 45px;
+  color: #ffffff;
+}
+
+.footer .footer-contact h2,
+.footer .footer-link h2,
+.footer .footer-newsletter h2 {
+  margin-bottom: 30px;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  color: #e81c2e;
+}
+
+.footer .footer-link a {
+  display: block;
+  margin-bottom: 10px;
+  color: #ffffff;
+  transition: 0.3s;
+}
+
+.footer .footer-link a::before {
+  position: relative;
+  content: '\f105';
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  margin-right: 10px;
+}
+
+.footer .footer-link a:hover {
+  color: #e81c2e;
+  letter-spacing: 1px;
+}
+
+.footer .footer-contact p i {
+  width: 25px;
+}
+
+.footer .footer-social {
+  position: relative;
+  margin-top: 20px;
+  display: flex;
+
+  justify-content: center;
+}
+
+.footer .footer-social a {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #202c45;
+  background: #ffffff;
+  border-radius: 40px;
+  margin-right: 5px;
+  transition: 0.5s;
+}
+
+.footer .footer-social a:last-child {
+  margin: 0;
+}
+
+.footer .footer-social a:hover {
+  color: #ffffff;
+  background: #e81c2e;
+}
+
+.footer .footer-newsletter form {
+  position: relative;
+  width: 100%;
+}
+
+.footer .footer-newsletter input {
+  margin-bottom: 15px;
+  height: 45px;
+  background: transparent;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
+  color: white;
+}
+.footer .footer-newsletter input::placeholder {
+  color: white;
+}
+
+.footer .footer-newsletter label {
+  margin-top: 5px;
+  color: #777777;
+  font-size: 14px;
+  letter-spacing: 1px;
+}
+
+.footer .footer-newsletter .btn.btn-custom {
+  width: 100%;
+  color: #d1282d;
+  background: #ffffff;
+  box-shadow: inset 0 0 0 0 #e81c2e;
+}
+
+.footer .footer-newsletter .btn:hover {
+  color: #ffffff;
+  background: #e81c2e;
+  box-shadow: inset 200px 0 0 0 #e81c2e;
+}
+
+.footer .copyright {
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 45px;
+}
+
+.footer .copyright p {
+  margin: 0;
+  color: #ffffff;
+}
+
+.footer .copyright p a {
+  color: #e81c2e;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+.footer .copyright p a:hover {
+  color: #ffffff;
+}
+
+/* End of Footer */
