--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,18 @@ body {
 .navbar-brand .cart-img {
   width: 40px;
 }
+.cartItems {
+  display: flex;
+}
+.cartQuantity {
+  position: absolute;
+  top: 17px;
+  font-size: 11px;
+  border: solid 2px rgb(255, 255, 255);
+  border-radius: 50%;
+
+  padding: 0 5px;
+}
 .navbar-toggler,
 .btn-close {
   border: none;
