--- a/src/App.css
+++ b/src/App.css
@@ -474,3 +474,36 @@ body {
 }
 
 /* End of Footer */
+
+/* Mobile Screen start*/
+
+@media all and (max-width: 600px) {
+  .navbar {
+  }
+  .banner-food-items .food1,
+  .food2,
+  .food3 {
+    width: 150px;
+    top: 270px;
+    left: -10px;
+  }
+  .food2 {
+    left: 110px;
+    top: 270px;
+  }
+  .food3 {
+    left: 50px;
+    top: 190px;
+  }
+  .banner-headings {
+    top: 190px;
+    left: 220px;
+  }
+  .banner-headings b {
+    font-size: 1.5rem;
+  }
+  .banner-headings p {
+    font-size: 0.8rem;
+  }
+}
+/* Mobile Screen End*/
