--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,16 @@
   margin: 0 auto;
   padding: 0;
   text-align: center;
+  box-sizing: border-box;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body {
   scroll-behavior: smooth;
+  width: 100%;
 }
 
 /* Navbar start */
@@ -85,7 +92,8 @@ body {
 
 .banner {
   height: 100vh;
-  width: 100%;
+  min-width: 100%;
+  overflow: auto;
 }
 .banner-image {
   width: 100%;
@@ -125,7 +133,11 @@ body {
   text-shadow: #191313 2px 8px 11px;
 }
 .banner-headings b {
-  font-size: 3rem;
+  font-size: max(3vw, 25px);
+}
+
+.banner-headings p {
+  font-size: max(1vw, 12px);
 }
 
 /* End of Banner */
@@ -498,12 +510,6 @@ body {
   .banner-headings {
     top: 190px;
     left: 220px;
-  }
-  .banner-headings b {
-    font-size: 1.5rem;
-  }
-  .banner-headings p {
-    font-size: 0.8rem;
   }
 }
 /* Mobile Screen End*/
